[gd_scene load_steps=4 format=3 uid="uid://b3ouif0d4g8f0"]

[ext_resource type="Script" path="res://ver_1/game_manager.gd" id="1_btbqh"]
[ext_resource type="PackedScene" uid="uid://o5mopq7q46cq" path="res://ver_1/game/net_manager.tscn" id="2_188hs"]
[ext_resource type="PackedScene" uid="uid://h4w7naqbhls5" path="res://assets/map/enemy_spawner.tscn" id="3_l8iil"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_btbqh")

[node name="NetManager" parent="." instance=ExtResource("2_188hs")]

[node name="EnemySpawner" parent="." instance=ExtResource("3_l8iil")]

[node name="Loot" type="Node2D" parent="." groups=["loot"]]
